@@ -1,3 +1,10 @@
+2002-08-18  John Harper  <jsh@unfactored.org>
+
+	* sawfish/wm/ext/workspace-grid.jl: new module from Michael
+	Toomim <toomim@cs.berkeley.edu> to interpret the
+	_NET_DESKTOP_LAYOUT wm-spec hints and provide two dimensional
+	workspace commands
+
 2002-08-03  John Harper  <jsh@unfactored.org>
 
 	* sawfish/wm/windows.jl (dock-window-properties): fix typo.
